@@ -530,8 +530,15 @@ class Parser(HTMLParserBase):
             raise EbookmakerBadFileException('unusable file')
 
         soup.html['xmlns'] = NS.xhtml
-        
-        # rap bare strings at body top level
+
+        # ancient browsers didn't understand stylesheets, so xml comments were used to hide the
+        # style text. Our CSS parser is too modern to remember this, it seems. 
+        # So we need to un-comment the sttyle text
+        xmlcomment = re.compile(r'<!--(.*?)-->', re.S)
+        for commented_style in soup.find_all('style', string=xmlcomment):
+            commented_style.string = xmlcomment.sub(r'\1', str(commented_style.string))
+
+        # wrap bare strings at body top level
         for elem in soup.html.body.contents:
             if isinstance(elem, NavigableString) and str(elem).strip(' \n\r\t'):
                 p = soup.new_tag('p')
